added space after first '--' in the long '----....' comment line in mysqldump just to make it compatible with the manual (fixed bug #1056)